# linkcraft

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  nginx.conf
common/: Cargo.toml
common/src/: db.rs  lib.rs  models.rs  rate_limiter.rs
link-service/: Cargo.toml  Dockerfile
link-service/docs/: api.md
link-service/src/: config.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  services.rs  state.rs
link-service/src/middleware/: auth.rs  ip_rate_limiter.rs  real_ip_layer.rs  user_rate_limiter.rs
link-service/src/services/: background_jobs.rs  shortlinks.rs
user-service/: Cargo.toml  Dockerfile
user-service/src/: config.rs  handlers.rs  lib.rs  main.rs  middleware.rs  services.rs  state.rs
user-service/src/models/: session.rs  user.rs
