[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32.4", features = ["tokio-comp", "aio", "connection-manager"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
tracing = "0.1.41"
serde = "1.0.219"
deadpool-redis = "0.22.0"
