[package]
name = "link-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.13"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
redis = { version = "0.32.4", features = ["tokio-comp", "aio", "connection-manager"] }
serde = "1.0.219"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono-tz = "0.10.4"
headers = "0.4.1"
validator = { version = "0.20.0", features = ["derive"] }
serial_test = "3.2.0"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
tower-http = { version = "0.6.6", features = ["trace"] }
jsonwebtoken = "9.3.1"
