[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
config = "0.15.13"
serde = "1.0.219"
serial_test = "3.2.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
redis = { version = "0.32.4", features = ["tokio-comp", "aio", "connection-manager"] }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
tower-http = {version = "0.6.6", features = ["trace"]}
dotenvy = "0.15.7"
rand = "0.9.2"
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
password-hash = "0.5.0"
jsonwebtoken = "9.3.1"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
validator = { version = "0.20.0", features = ["derive"] }
